# interviewer

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package.json
bench/: go.mod  main.go
src/: main.rs
static/: index.html
static/css/: main.css
static/js/: actions.js  random.js  ws.js
www/: index.html
