[package]
name = "interviewer"
version = "0.1.0"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = "*"
log = "*"
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
